# LingShu-backend

./: .cursorrules  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_zh.md  README.md  README_en.md  README_zh.md  pyproject.toml  requirements.txt
.cursor/rules/: lingshu-backend.mdc
app/: main.py
app/api/: channel_router.py  routers.py
app/api/models/: __init__.py  channel_models.py
app/application/: channel_processor.py
app/application/services/: __init__.py  channel_service.py  channel_service_impl.py
app/core/: channel_processor.py
app/domain/exceptions/: __init__.py  channel_exceptions.py
app/domain/models/: channel.py
app/domain/repositories/: channel_repository.py
app/infrastructure/: database.py  logging_config.py
app/models/: channel.py
docs/: DDD_TDD_Guidelines.md  Implementation_Plan.md  Mirth_Connect_Comparison.md  PRD.md  README.md  SDD.md  Test_Coverage_Monitoring.md
tests/: conftest.py
tests/api/: conftest.py  test_channels_api.py
tests/application/: test_channel_processor.py  test_channel_service.py  test_destination_type_conversion.py
tests/domain/: test_channel_model.py
tests/domain/repositories/: test_channel_repository.py
