[project]
name = "lingshu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.6.15",
    "click==8.2.1",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.7",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "orjson==3.10.18",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rich==14.0.0",
    "rich-toolkit==0.14.8",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.30",
    "sqlmodel==0.0.18",
    "starlette==0.37.2",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "ujson==5.10.0",
    "uvicorn==0.29.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]


[tool.ruff]
line-length = 100
indent-width = 4
exclude = [".venv", "venv", "migrations", "__pycache__"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "A",    # flake8-builtins
    "C90",  # mccabe complexity
    "D",    # pydocstyle (docstring)
]
ignore = [
    "D100",  # 忽略模块 docstring 要求
    "D104",  # 忽略包 docstring 要求
    "D415",  # 忽略包 docstring 要求
    "D400",  # 忽略包 docstring 要求
    "B008",  # FastAPI依赖注入场景下，忽略这个报错
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.isort]
known-first-party = ["app"]
combine-as-imports = true
force-single-line = false


